--- a/Forecast/ForecastDischarge.ipynb
+++ b/Forecast/ForecastDischarge.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Constants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DISTANCE_GALCHI_SUIRENITAR=30000\n",
+    "DISTANCE_BUDHI_SUIRENITAR=18500"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MATPLLOTLIB SETTINGS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.style.use('ggplot')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,106 +134,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Matplotlib Settings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.style.use('ggplot')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Visualizing Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>datetime</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2024-12-14 00:05:00+00:00</th>\n",
-       "      <td>333.616302</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-14 00:15:00+00:00</th>\n",
-       "      <td>333.642914</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-14 00:25:00+00:00</th>\n",
-       "      <td>333.609406</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-14 00:35:00+00:00</th>\n",
-       "      <td>333.621918</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-14 00:45:00+00:00</th>\n",
-       "      <td>333.617798</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                value\n",
-       "datetime                             \n",
-       "2024-12-14 00:05:00+00:00  333.616302\n",
-       "2024-12-14 00:15:00+00:00  333.642914\n",
-       "2024-12-14 00:25:00+00:00  333.609406\n",
-       "2024-12-14 00:35:00+00:00  333.621918\n",
-       "2024-12-14 00:45:00+00:00  333.617798"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# fig,ax=plt.subplots(3,1,figsize=(20,10),sharex=True)\n",
-    "# budhi_gandaki_df.plot(color='red',ax=ax[0])\n",
+    "budhi_gandaki_df=budhi_gandaki_df[['value']]\n",
+    "galchi_df=galchi_df[['value']]\n",
+    "suirenitar_df=suirenitar_df[['value']]\n",
+    "fig,ax=plt.subplots(3,1,figsize=(20,10),sharex=True)\n",
+    "budhi_gandaki_df.plot(color='red',ax=ax[0])\n",
     "\n",
-    "# galchi_df.plot(color='blue',ax=ax[1])\n",
+    "galchi_df.plot(color='blue',ax=ax[1])\n",
     "\n",
-    "# suirenitar_df.plot(color='green',ax=ax[2])\n",
-    "budhi_gandaki_df.head()"
+    "suirenitar_df.plot(color='green',ax=ax[2])\n"
    ]
   },
   {
@@ -212,50 +163,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# galchi_df['discharge']=galchi_df.apply(lambda row:calculate_discharge_galchi(water_level=row['value']),axis=1)\n",
-    "# budhi_gandaki_df['discharge']=budhi_gandaki_df.apply(lambda row:calculate_discharge_budhi(water_level=row['value']),axis=1)\n",
-    "# suirenitar_df['discharge']=suirenitar_df.apply(lambda row:calculate_discharge_suirenitar(water_level=row['value']),axis=1)"
+    "galchi_df['discharge']=galchi_df.apply(lambda row:calculate_discharge_galchi(water_level=row['value']),axis=1)\n",
+    "budhi_gandaki_df['discharge']=budhi_gandaki_df.apply(lambda row:calculate_discharge_budhi(water_level=row['value']),axis=1)\n",
+    "suirenitar_df['discharge']=suirenitar_df.apply(lambda row:calculate_discharge_suirenitar(water_level=row['value']),axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                value  discharge\n",
-      "datetime                                        \n",
-      "2024-12-14 08:45:00+00:00  333.549408        NaN\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(budhi_gandaki_df[budhi_gandaki_df['value']<333.56])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\RTS_Intern\\Forecast\\Utils.py:23: RuntimeWarning: invalid value encountered in scalar power\n",
-      "  power= difference**b\n"
-     ]
-    }
-   ],
-   "source": [
-    "budhi_gandaki_df['discharge']=budhi_gandaki_df.apply(lambda row:calculate_discharge_budhi(water_level=row['value']),axis=1)"
+    "galchi_df['mean_velocity']=galchi_df.apply(lambda row:calculate_mean_velocity_galchi(row['discharge']),axis=1)\n",
+    "budhi_gandaki_df['mean_velocity']=budhi_gandaki_df.apply(lambda row:calculate_mean_velocity_buddhi(row['discharge']),axis=1)"
    ]
   },
   {
@@ -263,7 +187,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "galchi_df[['time_lag_hr', 'time_lag_min']] = galchi_df.apply(\n",
+    "    lambda row: pd.Series(calcualte_time(DISTANCE_GALCHI_SUIRENITAR, row['mean_velocity'])), axis=1\n",
+    ")\n",
+    "budhi_df[['time_lag_hr', 'time_lag_min']] = budhi_df.apply(\n",
+    "    lambda row: pd.Series(calcualte_time(DISTANCE_BUDHI_SUIRENITAR, row['mean_velocity'])), axis=1\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
