--- a/Forecast/ForecatSiurenitar.ipynb
+++ b/Forecast/ForecatSiurenitar.ipynb
@@ -10,7 +10,8 @@
     "import matplotlib.pyplot as plt \n",
     "import numpy as np\n",
     "from decimal import Decimal\n",
-    "from Utils import  *"
+    "from Utils import  *\n",
+    "from FetchLatestData import fetch_water_level_datA"
    ]
   },
   {
@@ -22,12 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "DISTANCE_GALCHI_SUIRENITAR=30000\n",
-    "DISTANCE_BUDHI_SUIRENITAR=18500"
+    "DISTANCE_BUDHI_SUIRENITAR=18500\n",
+    "\n",
+    "SocketSiurenitarId=450\n",
+    "SocketGalchiId=451\n",
+    "SocketBudhiId=452"
    ]
   },
   {
@@ -61,7 +66,8 @@
    "source": [
     "galchi_df=pd.read_csv('Dataset/test/wl_galchi_test.csv')\n",
     "budhi_df=pd.read_csv('Dataset/test/wl_khari_test.csv')\n",
-    "suirenitar_df=pd.read_csv('Dataset/test/wl_suirenitar_test.csv')\n"
+    "suirenitar_df=pd.read_csv('Dataset/test/wl_suirenitar_test.csv')\n",
+    "galchi_df=pd.read_csv()\n"
    ]
   },
   {
